--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
             </div>
         </section>
         <!-- most popular section -->
-         <section class="ml-20 mr-20 mt-20 mb-20  ">
+         <section class="ml-20 max-sm:ml-2 mr-20 mt-20 mb-20  ">
           <p class="text-4xl font-bold text-green-600 ">Most Popular Products</p>
-          <div class="mt-20 flex">
+          <div class="mt-20 max-sm:flex-col max-sm:ml-0 flex">
             <img class="size-56 rounded ml-20" src="c2-assets/Beef-loin.webp" alt="">
-            <div class="ml-20 text-left mr-36 text-xl"> <p class="text-red-400 text-left mb-10 ml- text-5xl font-bold">Beef</p>
+            <div class="ml-20 max-sm:ml-0 max-sm:w-full max-sm:mt-8 max-sm:mr-0 text-left mr-36 text-xl"> <p class="text-red-400 text-left mb-10 ml- text-5xl font-bold">Beef</p>
             <p>Eating beef is another way to add more zinc to your diet and to help your skin become naturally glowy. Again, as with cooked oysters, animal sources are a better way to get your zinc sources than plant sources or supplements because they are absorbed by the body more easily.</p></div>
            
           </div>
