--- a/index.html
+++ b/index.html
@@ -294,17 +294,17 @@
             </div>
         </section>
     
-        <footer class="reg-btn text-white max-sm:pt-40 max-sm:gap-0 max-sm:pb-4 -mt-36 gap-20 pb-20 max-sm:flex-none w-full p-8 flex justify-between max-sm:pl-2 flex-wrap items-end pl-20 pr-20 fot-h ">
+        <footer class="reg-btn text-white max-sm:pt-44 max-sm:gap-0 max-sm:pb-4 -mt-36 gap-20 pb-20 max-sm:flex-none w-full p-8 flex justify-between max-sm:pl-2 flex-wrap items-end pl-20 pr-20 fot-h ">
             <div class="w-80 max-sm:pb-0 max-sm:w-full m-2">
                 <h3 class="font-bold text-lg max-sm:text-sm mb-4"><img src="c2-assets/logo-footer.png" alt="">  </h3>
                 <p class=" text-gray-300 max-sm: ">Discover a world of treats, toys, and   essentials handpicked for your furry  
                    friends.</p>
             </div>
-            <div class="flex- max-sm:-mt-2 max-sm:gap-12 m-2">
-                <h3 class="font-bold text-lg max-sm:mb-0 mb-4">Product</h3>
+            <div class="flex- max-sm:text-sm max-sm:-mt-2 max-sm:gap-12 m-2">
+                <h3 class="font-bold text-lg max-sm:text-sm max-sm:mb-0 mb-4">Product</h3>
                 <ul>
                   
-                    <li class="mb-2"><a href="#" class="hover:text-green-200">Services</a></li>
+                    <li class="mb-2 max-sm:mb-0"><a href="#" class="hover:text-green-200">Services</a></li>
                     <li><a href="#" class="hover:text-green-200">Contact us</a></li>
                 </ul>
             </div>
